truncate body with copy indicating issue is clickable

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -52,6 +52,16 @@ body {
     margin: 15px auto;
 }
 
+.small-card {
+    background-color: #44475a; 
+    padding: 15px;
+    border-radius: 15px;
+    color: #fff; 
+    width: 100%;
+    max-width: 50px; 
+    margin: 15px auto;
+}
+
 a {
     color: #50fa7b; 
 }
